// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accessibility should expose accessibility tree description with slotted subline 1`] = `
Object {
  "description": "Some Subline",
  "name": "Some label",
  "role": "button",
}
`;

exports[`accessibility should expose correct accessibility name when hide-label prop is set 1`] = `
Object {
  "name": "Some label",
  "role": "button",
}
`;

exports[`accessibility should expose correct accessibility tree if accessibility properties are set: Initial 1`] = `
Object {
  "expanded": true,
  "haspopup": "menu",
  "name": "Some more detailed label",
  "role": "combobox",
}
`;

exports[`accessibility should expose correct accessibility tree if accessibility properties are set: Pressed 1`] = `
Object {
  "name": "Some label",
  "pressed": true,
  "role": "button",
}
`;

exports[`accessibility should expose correct initial accessibility tree properties 1`] = `
Object {
  "name": "Some label",
  "role": "button",
}
`;
